[gd_scene load_steps=14 format=3 uid="uid://j40m86t4cokl"]

[ext_resource type="Script" uid="uid://fqhvnrkqjbul" path="res://scripts/score_ui.gd" id="1_81aap"]
[ext_resource type="Texture2D" uid="uid://cfo1ln6qhxjrj" path="res://Assets/Sprites/12-Live and Coins/Live Bar.png" id="1_yt0h2"]
[ext_resource type="Texture2D" uid="uid://dphmkouw5u7ta" path="res://Assets/Sprites/12-Live and Coins/Small Diamond (18x14).png" id="2_jw7sf"]
[ext_resource type="FontFile" uid="uid://c6q0lhvrmcxa3" path="res://Assets/Fonts/BMFont.fnt" id="2_npyp2"]

[sub_resource type="AtlasTexture" id="AtlasTexture_npyp2"]
atlas = ExtResource("2_jw7sf")
region = Rect2(0, 0, 18, 14)

[sub_resource type="AtlasTexture" id="AtlasTexture_pmu5j"]
atlas = ExtResource("2_jw7sf")
region = Rect2(18, 0, 18, 14)

[sub_resource type="AtlasTexture" id="AtlasTexture_myrg4"]
atlas = ExtResource("2_jw7sf")
region = Rect2(36, 0, 18, 14)

[sub_resource type="AtlasTexture" id="AtlasTexture_o4ix2"]
atlas = ExtResource("2_jw7sf")
region = Rect2(54, 0, 18, 14)

[sub_resource type="AtlasTexture" id="AtlasTexture_qhx7u"]
atlas = ExtResource("2_jw7sf")
region = Rect2(72, 0, 18, 14)

[sub_resource type="AtlasTexture" id="AtlasTexture_7nech"]
atlas = ExtResource("2_jw7sf")
region = Rect2(90, 0, 18, 14)

[sub_resource type="AtlasTexture" id="AtlasTexture_dxtnu"]
atlas = ExtResource("2_jw7sf")
region = Rect2(108, 0, 18, 14)

[sub_resource type="AtlasTexture" id="AtlasTexture_js1h3"]
atlas = ExtResource("2_jw7sf")
region = Rect2(126, 0, 18, 14)

[sub_resource type="SpriteFrames" id="SpriteFrames_wfp5c"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_npyp2")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_pmu5j")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_myrg4")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_o4ix2")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_qhx7u")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_7nech")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_dxtnu")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_js1h3")
}],
"loop": true,
"name": &"default",
"speed": 10.0
}]

[node name="ScoreUI" type="CanvasLayer"]
script = ExtResource("1_81aap")

[node name="ScoreUIContainer" type="HBoxContainer" parent="."]
offset_right = 40.0
offset_bottom = 40.0

[node name="Lifebars" type="TextureRect" parent="ScoreUIContainer"]
layout_mode = 2
texture = ExtResource("1_yt0h2")

[node name="ScoreGroup" type="Node2D" parent="ScoreUIContainer"]

[node name="DiamondScoreUI" type="Label" parent="ScoreUIContainer/ScoreGroup"]
offset_left = 34.0
offset_top = 28.0
offset_right = 66.0
offset_bottom = 77.0
theme_override_fonts/font = ExtResource("2_npyp2")
text = "0
"

[node name="DiamondUI" type="AnimatedSprite2D" parent="ScoreUIContainer/ScoreGroup/DiamondScoreUI"]
position = Vector2(-9, 4)
sprite_frames = SubResource("SpriteFrames_wfp5c")
frame_progress = 0.0962618
